ingress/nodeport-ing-ctl.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
      nodePort: 30443
