ingress/webapp-ingress.yaml
# dashboard-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "*.chenp.net"
    http:
      paths:
      - path: /myapp
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 3000
